micro_ecomm/infra/k8s/kong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
    - port: 8443
      targetPort: 8443
    - port: 8001
      targetPort: 8001
    - port: 8444
      targetPort: 8444
  selector:
    app: kong
